# exemple-django-tailwind-swiper

./: .env  README.md  db.sqlite3  manage.py  pyproject.toml
config/: urls.py  wsgi.py
config/settings/: base.py  dev.py  production.py
exemple/home/: views.py
exemple/templates/: base.html  home.html
frontend/: README.md  package-lock.json  package.json  vite.config.mjs
frontend/src/: index.js
frontend/src/styles/: app.css
